k8s/kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-cloud-games-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    # Abaixo ativamos o plugin JWT para todas as rotas deste Ingress
    # konghq.com/plugins: jwt-auth
spec:
  rules:
  - http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: users-api-service
            port:
              number: 80
      - path: /api/games
        pathType: Prefix
        backend:
          service:
            name: catalog-api-service
            port:
              number: 80
      - path: /api/payments
        pathType: Prefix
        backend:
          service:
            name: payments-api-service
            port:
              number: 80
